Versão 0.04 (Pq a 0.03 repetiu duas vezes) - Adicionada tela de login, autenticação de usuário e por página - Edição de erros e laboratórios - Mudança no banco de dados para salvar a data de Atualização do erro

--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,12 @@ a{
     width: 100%;
 }
 
+.container label {
+  text-decoration: solid;
+  font-weight: bolder;
+  font-size: 1.2em;
+}
+
 .descText {
   min-width: 20%;
   min-height: 10%;
@@ -91,6 +97,23 @@ a{
   .error{
     color: red;
   }
+
+  .button {
+    border: solid 1px black;
+    background-color: #ddd;
+    color: black;
+  }
+
+  .hubTable {
+    min-width: 15%;
+  }
+
+  .hubTable td, tr, th {
+    min-width: 15%;
+    text-align: center;
+  }
+
+
 
   table, th, td {
     margin: auto;
