--- a/src/style.css
+++ b/src/style.css
@@ -125,6 +125,12 @@ a{
     padding: 10px;
   }
 
+  .bottom-border {
+    
+    border-bottom: solid 3px black;
+    
+  }
+
 
 
   table, th, td {
@@ -140,3 +146,10 @@ a{
   }
 
   td:hover {background-color: #D6EEEE;}
+
+  * {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+
+  
